--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,9 +25,9 @@ $fontSize: rem(16); // де 14(px) - размер шрифта по умолча
 // Основные цвета
 $mainColor: #161616; // Цвет шрифта по умолчанию
 $goldColor: #D3A265;
-$brownColor: #3D3737;
 $grayColor: #8D8D8D;
 $whiteColor: #FFFFFF;
+$backgroundColor: #F4F4F4;
 
 // Настройка адаптивной сетки ===============================================================================================================================================================================================================================================================================================
 
