--- a/src/scss/base/popup.scss
+++ b/src/scss/base/popup.scss
@@ -1,16 +1,3 @@
-body::after {
-	content: "";
-	background-color: rgba(0, 0, 0, 0.5);
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	opacity: 0;
-	transition: opacity 0.8s ease 0s;
-	pointer-events: none;
-	z-index: 149;
-}
 .popup-show body::after {
 	opacity: 1;
 }
@@ -39,23 +26,64 @@ body::after {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 	min-height: 100%;
 	flex: 1 1 auto;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	width: 100%;	
 }
 .popup__content {
 	visibility: hidden;
 	transform: scale(0);
 	transition: transform 0.3s ease 0s;
-	background-color: #eee;
-	padding: 20px;
+	background-color: $whiteColor;
+	padding: 50px 40px 40px;
 	width: 100%;
-	max-width: 900px;
-	border-radius: 20px;
+	max-width: 500px;
+	border-radius: 10px;
 	.lock & {
 		visibility: visible;
 	}
 }
+.popup__close {
+	position: absolute;		
+	top: 15px;
+	right: 17px;
+	font-size: rem(20);
+	line-height: 1;
+	padding: 5px;
+}
+ 
+.popup__form {
+
+}
+
+.form-popup {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	row-gap: 30px;
+
+	&__group {		
+		display: flex;
+		flex-direction: column;		
+	}
+
+	&__label {
+		font-weight: 700;	
+		line-height: 1.5;	
+		text-transform: uppercase;			
+	}
+
+	&__input {
+		padding: 10px 0px;
+		border-bottom: 2px solid $goldColor;
+	}
+
+	&__btn {	
+		padding: 12px 34px !important;
+		@media (min-width:$mobileSmall){
+			align-self: center;  
+		}		
+	}
+}
+
