--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,1 +1,126 @@
 // Заголовки, общие БЕМ блоки и прочее...
+[class*="_backgroundGray"] {
+	background-color: $backgroundColor;
+}
+
+body::after {
+	content: "";
+	background-color: rgba(61, 55, 55, 0.7);
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	opacity: 0;
+	transition: opacity 0.8s ease 0s;
+	pointer-events: none;
+	z-index: 49;
+}
+
+.title {
+	font-family: 'BN Chester Pro';		
+	font-weight: 400;
+	font-size: rem(32);
+	line-height: 1.025;
+	letter-spacing: 0.005em;
+	@media (min-width:$mobile){
+		font-size: rem(40);
+	}
+	span {
+		color: $goldColor;
+	}	
+	&_center {
+		text-align: center;
+		margin: 0 auto;
+	}
+}
+
+.footer-title {
+	font-weight: 600;
+	line-height: 1.25;
+	text-transform: uppercase;
+}
+
+.text {	
+	line-height: 1.6875;	
+	&_gray {
+		color: $grayColor;
+	}
+	p {
+		&:not(:first-child) {
+			margin-top: 20px;
+		}
+	}
+}
+
+.action {
+	display: flex;
+	flex-direction: column;
+	@media (min-width:$mobileSmall){
+		 flex-direction: row; 
+	}
+}
+
+.button {
+	padding: 12px 20px;
+	border: 2px solid $goldColor;
+	border-radius: 8px;
+	font-weight: 700;	
+	line-height: 1.5;	
+	text-transform: uppercase;		
+	@media (min-width:$mobile){
+		padding: 12px 34px;
+	}
+	&_hover {
+		transition: background-color 0.5s ease 0s,
+		border-color 0.3s ease 0s;
+		&:hover {
+			background-color: #F5C58A;
+			border-color: #F5C58A;
+		}
+	}
+}
+
+.show-more {
+	font-weight: 600;	
+	font-size: rem(14);
+	line-height: 1.2;
+	text-transform: uppercase;
+}
+
+.social {
+	display: flex;
+	column-gap: 12px;
+	&__item {
+		svg {
+			width: 20px;
+			height: 20px;
+			fill: $goldColor;
+			transition: fill 0.3s ease 0s;
+		}
+		&:hover {
+			svg {
+				fill: #F5C58A;
+			}
+		}
+	}
+}
+
+.hover-underline {
+	position: relative;
+	&::after {
+		content: "";
+		position: absolute;
+		width: 0;
+		height: 1px;
+		bottom: -3px;
+		left: 0;
+		background-color: $goldColor;
+		transition: all 0.3s ease 0s;
+	}
+	&:hover {
+		&::after {
+			width: 100%;
+		}
+	}
+}
