--- a/src/scss/fonts/fonts.scss
+++ b/src/scss/fonts/fonts.scss
@@ -1,21 +1,7 @@
 @font-face {
-	font-family: gilroy;
+	font-family: BN Chester Regular;
 	font-display: swap;
-	src: url("../fonts/gilroy-medium.woff2") format("woff2"), url("../fonts/gilroy-medium.woff") format("woff");
-	font-weight: 500;
-	font-style: normal;
-}
-@font-face {
-	font-family: BNChester;
-	font-display: swap;
-	src: url("../fonts/BNChester.woff2") format("woff2"), url("../fonts/BNChester.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: gilroy;
-	font-display: swap;
-	src: url("../fonts/gilroy-regular.woff2") format("woff2"), url("../fonts/gilroy-regular.woff") format("woff");
+	src: url("../fonts/BN Chester Regular.woff2") format("woff2"), url("../fonts/BN Chester Regular.woff") format("woff");
 	font-weight: 400;
 	font-style: normal;
 }
@@ -29,7 +15,21 @@
 @font-face {
 	font-family: gilroy;
 	font-display: swap;
+	src: url("../fonts/gilroy-medium.woff2") format("woff2"), url("../fonts/gilroy-medium.woff") format("woff");
+	font-weight: 500;
+	font-style: normal;
+}
+@font-face {
+	font-family: gilroy;
+	font-display: swap;
 	src: url("../fonts/gilroy-semibold.woff2") format("woff2"), url("../fonts/gilroy-semibold.woff") format("woff");
 	font-weight: 600;
+	font-style: normal;
+}
+@font-face {
+	font-family: gilroy;
+	font-display: swap;
+	src: url("../fonts/gilroy-regular.woff2") format("woff2"), url("../fonts/gilroy-regular.woff") format("woff");
+	font-weight: 400;
 	font-style: normal;
 }
