--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -30,28 +30,44 @@
 	&__menu {
 		flex: 1 1 auto;
 	}
+	&__icon {
+		position: fixed;
+		top: 30px;
+		right: 16px;
+		transform: translateY(-50%);
+	}
 }
 
 .menu {
+	&__wrapper {
+		@media (max-width:$mobile){
+			position: fixed;
+			width: 100%;
+			height: 100%;
+			right: -100%;
+			top: 0;
+			transition: right 0.6s ease 0s;					
+			.menu-open & {
+				right: 0; 
+			 }			
+		}	  
+	}
 	&__body {
 		font-weight: 500;
 		line-height: 1.19;	
 		@media (max-width:$mobile){
-			position: fixed;
+			position: absolute;
 			width: 250px;
 			height: 100%;
-			right: -100%;
-			top: 0;
-			transition: right 0.6s ease 0s;
+			right: 0;
+			top: 0;			
 			padding: 60px 15px 45px 15px;
 			display: flex;
 			flex-direction: column-reverse;			
 			justify-content: start;
 			row-gap: 50px;
-			background-color:  $whiteColor;				
-			.menu-open & {
-				right: 0; 
-			 }			
+			background-color:  $whiteColor;			
+				
 		}	  
 	  @media (min-width:$mobile){
 		  display: flex;
@@ -80,8 +96,7 @@
 		@media (min-width:$mobile){
 			display: flex;
 			column-gap: 48.5px;
-		}
-		
+		}	
 	}
 
 	&__item {
@@ -131,7 +146,7 @@
 	@media (max-width: $mobile) {
 		flex: 0 0 auto;
 		display: block;
-		position: relative;
+		position: relative;		
 		width: rem(30);
 		height: rem(18);		
 		@media (any-hover: none) {
