--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -65,7 +65,7 @@ $responsiveType: 1;
 
 body {
 	// Скролл заблокирован
-	.lock & {
+	&.lock {
 		overflow: hidden;
 		touch-action: none;
 		overscroll-behavior: none;
